--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: nanasess/setup-chromedriver@v3
-        with:
-          # Optional: do not specify to match Chrome's version
-          chromedriver-version: '88.0.4324.96
+        with: chromedriver-version: '88.0.4324.96
 
       #python and robotframework setup
       - name: Set up Python 3.11
