Upgrade main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          robot tests.robot
+          robot tests/login.robot
