--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: nanasess/setup-chromedriver@v2
-        with:
-          chromedriver-version: '114.0.5735.90'
-      - run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 800x800x24 > /dev/null 2>&1 & # optional
+      # - uses: nanasess/setup-chromedriver@v2
+      #   with:
+      #     chromedriver-version: '114.0.5735.90'
+      # - run: |
+      #     export DISPLAY=:99
+      #     chromedriver --url-base=/wd/hub &
+      #     sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       #python and robotframework setup
       - name: Set up Python 3.11
